alignment on contact and mobile nav size fixed

--- a/src/CSS/styles.scss
+++ b/src/CSS/styles.scss
@@ -101,13 +101,13 @@ a:visited {
   width: 110vw;
   background-color: $medium;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
   gap: 5rem;
   transform: translateX(100%);
   transition: 1.5s ease-in-out;
 
   li {
-    font-size: 5rem;
+    font-size: 3rem;
     border-left: $light solid 0.5rem;
     padding-left: 2rem;
   }
@@ -143,7 +143,7 @@ body {
 .title {
   font-size: 5rem;
   text-shadow: 0px 0px 1rem $medium;
-  padding: 0 0 3rem 1rem;
+  padding: 0 1rem 3rem 1rem;
 }
 
 /////////////// hero section ///////////////
@@ -157,12 +157,12 @@ body {
 }
 .hero-title {
   font-size: 5rem;
-  padding: 3rem;
+  padding: 2rem 3rem;
   text-shadow: 0px 0px 1rem $medium;
 }
 .hero-text {
   font-size: 2rem;
-  padding: 3rem;
+  padding: 2rem 3rem;
 }
 /////////////// skills section ///////////////
 .skills {
